# -*- mode: python -*-
# vi: set ft=python :

cc_library(
    name = "usb_protocol",
    hdrs = ["usb_protocol.h"],
    srcs = ["usb_protocol.cc"],
    deps = [
        "@drake//common:essential",
        "@fmt",
    ],
)

cc_library(
    name = "usb_serial_link",
    hdrs = ["usb_serial_link.h"],
    srcs = ["usb_serial_link.cc"],
)

cc_test(
    name = "usb_protocol_test",
    srcs = ["test/usb_protocol_test.cc"],
    deps = [
        "usb_protocol",
        "@gtest//:main",
    ],
)
