# -*- mode: python -*-
# vi: set ft=python :

cc_library(
    name = "common",
    hdrs = ["common.h"],
    srcs = [],
)

cc_library(
    name = "protocol_messages",
    hdrs = ["protocol_messages.h"],
    srcs = [
        "protocol_messages.cc",
    ],
    deps = [
        ":common",
        "@drake//common:essential",
        "@fmt",
    ],
)

cc_test(
    name = "protocol_messages_test",
    srcs = ["test/protocol_messages_test.cc"],
    deps = [
        "protocol_messages",
        "@gtest//:main",
    ],
)

cc_library(
    name = "usb_serial_link",
    hdrs = ["usb_serial_link.h"],
    srcs = ["usb_serial_link.cc"],
)

cc_library(
    name = "mirobot_driver",
    hdrs = ["mirobot_driver.h"],
    srcs = ["mirobot_driver.cc"],
    deps = [
        ":common",
    ],
)
